fixed text alignment

--- a/src/components/gallery/portal.scss
+++ b/src/components/gallery/portal.scss
@@ -1,5 +1,5 @@
 .Portal {
-  z-index: 1;
+  z-index: 2;
   position: fixed;
   top:0;
   height: 100vh;
